--- a/index.html
+++ b/index.html
@@ -54,6 +54,40 @@ Created by [40423103](http://40423103.github.io/2017springcd_hw/blog/)
 
 
 						
+<section>
+<section data-markdown>
+    <script type="text/template">
+#第一週
+
+
+
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+##1. 下載[可攜程式系統(1GB)](http://service.mde.tw/public/tiny2017_1GB.7z)
+
+
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+##2. 設定 Stunnel.conf 的 IP
+
+
+    </script>
+</section>
+<section data-markdown>
+    <script type="text/template">
+###設定影片
+
+<iframe src="https://player.vimeo.com/video/209672409" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+    </script>
+</section>
+</section>
+
+						
 </div>
 
 </div>
