--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
 ### 四設計二甲 40423103 劉怡萱
 
+[BLOG](http://40423103.github.io/2017springcd_hw/blog/)
+
 <small>
 Created by [40423103](http://40423103.github.io/2017springcd_hw/blog/)
 </small>
